# LKM

./: .gitignore  README.md  compile_commands.json
.cache/clangd/index/: ftrace_helper.h.832536FD3C588EC7.idx  hooks.h.FEC87AFCF60A9AD2.idx  lkm.c.7C4AB312A8417844.idx  tcp.h.E0BEC14F6CA6002C.idx
.zed/: settings.json
doc/: README.md
include/: common.h
include/connector/: packet.h  tcp.h
include/crypto/: cipher.h  kpp.h
include/hooks/: hooks.h  thread.h
src/: ..module-common.o.cmd  Makefile  lkm.c
usermode/usermode_backdoor/: Cargo.toml
usermode/usermode_backdoor/src/: main.rs
