[package]
name = "usermode_backdoor"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
thiserror = "1.0.63"
tokio = { version = "1.39.1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }
